welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: not found: value maths
  	return 2*maths.abs(21-n)
                 ^diff21:4: error: not found: value maths
  return maths.abs(21-n)
         ^