welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
  if (n>21)
  	return 2*maths.abs(21-n)
  return maths.abs(21-n)
}